[package]
name = "ion_engine"
version = "0.1.0"
edition = "2024"
license = "All Rights Reserved"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_engine = { path = "derive_engine" }
ion_common = { path = "../ion_common" }

# Gfx
wgpu = "25.0.1"
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }
bincode = "2.0.1"

# UI
egui = "0.32.0"
egui-wgpu = "0.32.0"
egui-winit = { version = "0.32.0" , default-features = false, features = ["bytemuck", "links"]}

# OS
windows = { version = "0.59.0", features = ["Win32_Media"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0.1", features = ["webgl"]}

